--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
   },
   "dependencies": {
     "fs-jetpack": "^2.1.0",
-    "electron-updater": "3.0.3"
+    "electron-updater": "3.0.3",
+    "electron-log": "2.2.16"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.54",
